<resources>
    <string name="app_name">Language_app</string>
    <string name="onboarding_1_next_button">Next</string>
    <string name="onboarding_2_more_button">More</string>
    <string name="onboarding_3_choose_lang_button">Choose a language</string>
    <string name="skip_onboarding">Skip onboarding</string>
    <string name="choose_lang_title">Language select</string>
    <string name="whats_your_language">What is your Mother language?</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="choose">Choose</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="loginTextView1">For free, join now and start learning</string>
    <string name="loginEmail">Email Address</string>
    <string name="loginPass">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="Continue">Continue</string>
    <string name="guess_the_animal">Guess the animal</string>
    <string name="next">Next</string>
    <string name="try_again">Try again</string>
    <string name="word_practice">Word practice</string>
    <string name="listening">Listening</string>
    <string name="new_here">New here?</string>
    <string name="press_button_and_say_the_word">Press button and say the word. Our service will check your pronunciation</string>
    <string name="cucumber">cucumber</string>
    <string name="check_my_speech">Check my speech</string>
    <string name="kju_k_mb">[ \'kju:kʌmbə ]</string>
    <string name="danish">Danish</string>
    <string name="spanish">Spanish</string>
    <string name="already_a_member">Already a member?</string>
    <string name="write_animal_name">Write the animal\'s name</string>
    <string name="the_answer_is_raccoon">The answer is: Raccoon (alt: Racoon)</string>
    <string name="sorry_wrong_answer">Sorry, wrong answer! :(</string>
    <string name="congratulations__correct">Congratulations! You are correct!</string>
    <string name="check">Check</string>
    <string name="calmness">Спокойность</string>
    <string name="urgency_but">Срочность</string>
    <string name="compassion_but">Сочувственность</string>
    <string name="juicy_but">Сочность</string>
    <string name="urgency">urgency</string>
    <string name="rj_ns"><![CDATA[[ ˈərjənsē]]]></string>
    <string name="the_answer_is_srch">The answer is: Срочность</string>
</resources>