<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordError">

    <Button
        android:id="@+id/nextButton_w"
        android:layout_width="313dp"
        android:layout_height="0dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/button_rounded_blue"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/next"

        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18_w" />

    <Button
        android:id="@+id/tryAgainButton_w"
        android:layout_width="313dp"
        android:layout_height="0dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/button_rounded_blue"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/try_again"

        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18_w" />

    <TextView
        android:id="@+id/textView17_w"
        android:layout_width="194dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/fredoka_condensed_bold"
        android:text="@string/sorry_wrong_answer"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

    </TextView>

    <TextView
        android:id="@+id/textView18_w"
        android:layout_width="224dp"
        android:layout_height="23dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/fredoka_condensed_semibold"
        android:text="@string/the_answer_is_srch"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

    </TextView>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#D6185D"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/fredoka_semicondensed_bold"
            android:text="@string/word_practice"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="15dp" />

        <Button
            android:id="@+id/back_button_login"
            android:layout_width="41dp"
            android:layout_height="39dp"
            android:background="@drawable/back_button"
            android:onClick="onBackButtonClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.013" />
    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="203dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/error_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topAppBarLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>




